--- a/Foundations/javaScript/Digital_Clock/index.html
+++ b/Foundations/javaScript/Digital_Clock/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <script src="Class.js" defer></script>
+    <h1>Digital Clock</h1>
+    <div id="container">
+        It is the time
+    </div>
+    <script src="Digital_Clock.js" defer></script>
+    
 </body>
 </html>
 
